--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </nav>
           <a
             class="header__btn btn"
-            href="https://raydium.io/swap/?inputMint=sol&outputMint=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+            href="buylink"
             target="_blank"
             >Buy $BENNY</a
           >
@@ -820,7 +820,7 @@ Now, he is leading the charge in  this bull market<br /><br />
             </p>
             <a
               class="header__btn btn"
-              href="https://raydium.io/swap/?inputMint=sol&outputMint=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+              href="buylink"
               target="_blank"
             >
               Buy now!</a
@@ -923,6 +923,11 @@ Now, he is leading the charge in  this bull market<br /><br />
                 <button class="contract__btn btn">Copy</button>
               </div>
             </div>
+
+            <div class="token_right">
+              <img src="/images/tkn.png" alt="" style="width:100%">
+            </div>
+
           </div>
         </div>
         <style>
