--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="hero__socials">
             <a
               class="hero__social-btn btn btn_icon"
-              href="tglink"
+              href="https://t.me/bennyerc"
               target="_blank"
             >
               <svg
@@ -898,7 +898,7 @@ Now, he is leading the charge in  this bull market<br /><br />
               <div class="tokenomics__row">
                 <div class="tokenomics__item">
                   <span>Supply</span>
-                  <strong>1,000,000,000 $BENNY</strong>
+                  <strong>2B $BENNY</strong>
                 </div>
                 <div class="tokenomics__item">
                   <span>Taxes</span>
@@ -1201,7 +1201,7 @@ Just good vibes, bull energy, and a reminder that sometimes, memes do move marke
           <div class="footer__socials">
             <a
               class="footer__social-btn btn btn_icon"
-              href="tglink"
+              href="https://t.me/bennyerc"
               target="_blank"
             >
               <svg
