--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <img src="images/Lettering%20blepe.png" alt="" />
           </a>
           <nav class="header__nav">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#tokenomics">Tokenomics</a>
+            <a >Home</a>
+            <a >About</a>
+            <a >Tokenomics</a>
            
             <!--           <a href="#faq">Faq</a> -->
           </nav>
